CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
SET(CMAKE_C_FLAGS_RELEASE "-Wall -fPIC -O2")
SET(CMAKE_C_FLAGS_DEBUG "-Wall -fPIC -g")
PROJECT(ea1)
IF(NOT CMAKE_BUILD_TYPE)
  SET(CMAKE_BUILD_TYPE "Release")
ENDIF(NOT CMAKE_BUILD_TYPE)
MESSAGE("${PROJECT_NAME} CMAKE_BUILD_TYPE: ${CMAKE_BUILD_TYPE}")
ADD_LIBRARY(ea1 STATIC ea1_time.c)
## test
if(DO_TEST)
  ENABLE_TESTING()
  ADD_SUBDIRECTORY(test EXCLUDE_FROM_ALL)
endif(DO_TEST)
