CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
SET(CMAKE_C_FLAGS_RELEASE "-Wall -O2")
SET(CMAKE_C_FLAGS_DEBUG "-Wall -g")
# SET(CMAKE_BUILD_TYPE Release)
PROJECT(ea1_test)
INCLUDE_DIRECTORIES(..)
ADD_EXECUTABLE(ea1_test ea1_test_main.cpp)
target_link_libraries(ea1_test ea1)
ENABLE_TESTING()
ADD_TEST(test0 ea1_test)